--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "bin": {
-    "uniqode": "src/js/uniqode"
+    "uniqode": "src/js/uniqode.js"
   },
   "repository": {
     "type": "git",
