--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "uncodify",
-  "version": "0.0.1",
+  "version": "0.0.3",
   "description": "Decodes unicode source files into valid CoffeeScript/JavaScript",
   "main": "src/js/uncodify.js",
   "scripts": {
-    "start": "node src/js/uncodify.js",
+    "start": "node src/js/uncodify",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "bin": {
@@ -14,6 +14,12 @@
     "type": "git",
     "url": "git+https://github.com/monkybrain/uncodify.git"
   },
+  "keywords": [
+    "unicode",
+    "decode",
+    "transcode",
+    "coffeescript"
+  ],
   "author": "monkybrain",
   "license": "ISC",
   "bugs": {
